--- a/menu_enlace/carreras.html
+++ b/menu_enlace/carreras.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>carreras - Panel de Navegación</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/diseñowe/css/menuestilos.css">
+    <link rel="stylesheet" type="text/css" href="/css/menuestilos.css">
 </head>
 <body id="inicio">
     <nav class="nav-futurista">
@@ -27,7 +27,7 @@
                     <span class="icon">🎊</span>
                     <span class="text">Egresados</span>
                 </a></li>
-                <li><a href="S.amigo.html">
+                <li><a href="s.amigo.html">
                     <span class="icon">🤝</span>
                     <span class="text">S.amigos</span>
                 </a></li>
