--- a/menu_enlace/egresados.html
+++ b/menu_enlace/egresados.html
@@ -27,7 +27,7 @@
                     <span class="icon">🎊</span>
                     <span class="text">Egresados</span>
                 </a></li>
-                <li><a href="S.amigo.html">
+                <li><a href="s.amigo.html">
                     <span class="icon">🤝</span>
                     <span class="text">S.amigos</span>
                 </a></li>
